--- a/Bank-project-pbd/AdminMainManu.resx
+++ b/Bank-project-pbd/AdminMainManu.resx
@@ -252,4 +252,7 @@
         /uT/79Hq/wHA0n/Apa6SQgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="errorProviderError.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>187, 15</value>
+  </metadata>
 </root>
